[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
websocket-rooms = { path = "../websocket-rooms/websocket-rooms" }
bincode = "1.3"
serde = { version = "1.0.2", features = ["derive"] }
axum = { version = "0.7.7", features = ["ws", "macros"] }
tokio = { version = "1.40.0", features = ["full"] }